--- a/.env
+++ b/.env
@@ -1,4 +1,6 @@
 MODE=DEVELOPMENT
 PORT=8080
 DEBUG=true
-MONGO_URL=mongodb+srv://gabriela:135632@ecommerce1.dxk6fgr.mongodb.net/BaseSessions?retryWrites=true&w=majority
+MONGO_URL=mongodb+srv://gabriela:135632@ecommerce1.dxk6fgr.mongodb.net/test?retryWrites=true&w=majority
+ADMIN_EMAIL=gabrielaarenas022@gmail.com
+ADMIN_PASSWORD=123
