--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "moment": "^2.29.4",
     "mongoose": "^6.5.4",
     "morgan": "^1.10.0",
+    "nodemailer": "^6.8.0",
     "nodemon": "^2.0.19",
     "normalizr": "^3.6.2",
     "passport": "^0.6.0",
